--- a/app/views/dashboard/informesRecupero/tablaDetalleDeudas.scala.html
+++ b/app/views/dashboard/informesRecupero/tablaDetalleDeudas.scala.html
@@ -4,7 +4,9 @@
 </thead>
 <thead>
 	<th>FINANCIADOR-PACIENTE</th>
-	<!-- <th style="text-align: center;" align="center">FACTURADO</th>
-	<th style="text-align: center;" align="center">PAGOS</th> -->
+	<!-- <th style="text-align: center;" align="center">FACTURADO</th> -->
+
 	<th style="text-align: center;"align="center">A COBRAR</th>
+	<th style="text-align: center;" align="center">PAGOS > 01/01/2023</th>
+	<th style="text-align: center;" align="center">Ultimo Pago</th>
 </thead>
