--- a/app/views/dashboard/informesRecupero/tablaDetalleDeudas.scala.html
+++ b/app/views/dashboard/informesRecupero/tablaDetalleDeudas.scala.html
@@ -5,7 +5,7 @@
 <thead>
 	<th>FINANCIADOR-PACIENTE</th>
 	<!-- <th style="text-align: center;" align="center">FACTURADO</th> -->
-
+	<th>CUIT</th>
 	<th style="text-align: center;"align="center">A COBRAR</th>
 	<th style="text-align: center;" align="center">PAGOS > 01/01/2023</th>
 	<th style="text-align: center;" align="center">Ultimo Pago</th>
