--- a/app/views/dashboard/informesRecupero/index.scala.html
+++ b/app/views/dashboard/informesRecupero/index.scala.html
@@ -22,7 +22,7 @@
 			<div class="panel-body">
 				<div class="row margin-bottom-25">
 					<div class="col-sm-12">
-						<a href="@controllers.dashboard.routes.InformesRecuperoReportesController.deudasPorTipoDeCliente(-1)"  class="btn btn-default">
+						<a href="@controllers.dashboard.routes.InformesRecuperoReportesController.deudasPorTipoDeCliente(-1,"""""","""""")"  class="btn btn-default">
 						<i class="glyphicon glyphicon glyphicon-signal"></i> Informe General</a>
 					</div>
 				</div>
