--- a/app/views/compras/productos/modalBusquedaProductoIps.scala.html
+++ b/app/views/compras/productos/modalBusquedaProductoIps.scala.html
@@ -1,6 +1,6 @@
 @(buscador: utils.pagination.Pagination[Producto], formBuscador: DynamicForm)
 @import helper._
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 
 <div id="modalBusquedaProductos" class="contenedorPaginador ajaxPaginador">
 <form action="@controllers.compras.routes.ProductosController.modalBuscarIps()" method="GET">
@@ -14,7 +14,7 @@
 			@inputText(formBuscador("codigo"), 'class -> "form-control")
 		</div>
 		<div class="col-sm-2">
-			<label class="control-label">&nbsp 
+			<label class="control-label">&nbsp
 			<button class="btn btn-primary form-control">Buscar</button>
 			</label>
 		</div>
@@ -26,8 +26,8 @@
 	    <em>No se encuentran Productos</em>
 	</div>
 } else {
-    Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s). 
-    	
+    Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s).
+
 	<table class="table table-striped table-bordered table-hover">
 		<thead>
 			<tr>
@@ -35,24 +35,26 @@
 				<th>Codigo</th>
 				<th>Nombre</th>
 				<th>Precio</th>
+				<th>Precio Extranjero</th>
 			</tr>
 		</thead>
 		<tbody>
-    	
+
     @for(producto <- buscador.getList) {
 	<tr data-id="@producto.id" class="modalSeleccionProducto">
 		<td>@producto.referencia</td>
 		<td>@producto.codigo_ips</td>
 		<td>@producto.nombre</td>
 		<td>@(utils.NumberUtils.moneda(producto.precio_coste))</td>
-	</tr>    
+		<td>@(utils.NumberUtils.moneda(producto.precio_extranjero))</td>
+	</tr>
     }
     </tbody>
     </table>
-    
+
 	<div class="pagination pull-right">
 	    @views.html.helpers.paginador(buscador, controllers.compras.routes.ProductosController.modalBuscarIps())
-	</div>	
+	</div>
 }
 </div>
 
@@ -68,7 +70,7 @@ $( function(){
 			$(document).trigger("modal.seleccion.producto.simple", data);
 		});
 	});
-	
+
 	contenedor.find('form').on('submit', function(){
 		var url = $(this).attr("action");
 		var query = $(this).serialize();
