--- a/app/views/recupero/recuperoFactura/editarRecuperoFactura.scala.html
+++ b/app/views/recupero/recuperoFactura/editarRecuperoFactura.scala.html
@@ -22,10 +22,10 @@
 				    <span class="caret"></span>
 				  </button>
 				  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-				    
+
 				  </ul>
 				</div>
-				
+
 				<div class="dropdown pull-right btn-header">
 				 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
 				 	<i class="glyphicon glyphicon-cog"></i>
@@ -33,38 +33,39 @@
 				    <span class="caret"></span>
 				  </button>
 				  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-				  	
+
 				  </ul>
 				</div>
-					
+
 				<div class="pull-right btn-header">
 					<a href="@controllers.recupero.routes.RecuperoFacturasController.crear()"  class="btn btn-default"><i class="glyphicon glyphicon-plus-sign"></i> Nueva Factura</a>
 				</div>
 			</div>
-			
-			
+
+
 		</div>
 	</div>
-	
+
 	@if(flash.containsKey("error")) {
 		<div class="alert alert-danger">
 			@flash.get("error")
 		</div>
 	}
-	
+
 
 	@helper.form(action = controllers.recupero.routes.RecuperoFacturasController.actualizar(recuperoFactura.id)) {
 
-	
+
 		@inputText(recuperoFacturaForm("id"), 'hidden -> "hidden")
+		<input type="hidden" id="tipo_cliente" value="@if(recuperoFactura != null) {@recuperoFactura.cliente.tipo.id}" />
 		@views.html.recupero.recuperoFactura.formRecuperoFactura(recuperoFacturaForm)
-		@views.html.recupero.recuperoFactura.tabsRecuperoFactura(true, recuperoFacturaForm)	
-		
+		@views.html.recupero.recuperoFactura.tabsRecuperoFactura(true, recuperoFacturaForm)
+
 		<h4>Estado actual: 	<b>@recuperoFactura.estado.nombre</b></h4>
-		<div class="row margin-bottom-25">	
-			
+		<div class="row margin-bottom-25">
+
 		</div>
-		
+
 	}
 
 }
