--- a/app/views/haberes/liquidacionMeses/verLiquidacionMes.scala.html
+++ b/app/views/haberes/liquidacionMeses/verLiquidacionMes.scala.html
@@ -319,14 +319,25 @@
 							</div>
 
 							<div class="col-sm-12 margin-bottom-25">
-								<a id="exportEmbargo" data-url="@controllers.haberes.routes.LiquidacionAccionesController.exportEmbargos(lc.id,true)"  class="btn btn-default">
+								<a id="exportEmbargo" data-url="@controllers.haberes.routes.LiquidacionAccionesController.exportEmbargos(lc.id,true,true)"  class="btn btn-default">
 								<i class="glyphicon glyphicon-floppy-open"></i>EMBARGOS MACRO</a>
 
 							</div>
 							<div class="col-sm-12 margin-bottom-25">
-								<a id="exportEmbargoExterno" data-url="@controllers.haberes.routes.LiquidacionAccionesController.exportEmbargosExternos(lc.id,true)"  class="btn btn-default">
+								<a id="exportEmbargoExterno" data-url="@controllers.haberes.routes.LiquidacionAccionesController.exportEmbargosExternos(lc.id,true,true)"  class="btn btn-default">
 								<i class="glyphicon glyphicon-floppy-open"></i>EMBARGOS EXTERNOS</a>
 							</div>
+
+							<div class="col-sm-12 margin-bottom-25">
+								<a id="exportEmbargo" data-url="@controllers.haberes.routes.LiquidacionAccionesController.exportEmbargos(lc.id,true,false)"  class="btn btn-default">
+								<i class="glyphicon glyphicon-floppy-open"></i>EMBARGOS MACRO POST-ESPERA</a>
+
+							</div>
+							<div class="col-sm-12 margin-bottom-25">
+								<a id="exportEmbargoExterno" data-url="@controllers.haberes.routes.LiquidacionAccionesController.exportEmbargosExternos(lc.id,true,false)"  class="btn btn-default">
+								<i class="glyphicon glyphicon-floppy-open"></i>EMBARGOS EXTERNOS POST-ESPERA</a>
+							</div>
+
 							<!-- <div class="col-sm-12 margin-bottom-25">
 								<a id="exportBanco" data-url="@controllers.haberes.routes.LiquidacionAccionesController.exportBanco(lc.id)"  class="btn btn-default">
 								<i class="glyphicon glyphicon-floppy-open"></i> Datos exportacion banco</a>
