--- a/app/views/haberes/liquidacionPuestos/verLiquidacionPuesto.scala.html
+++ b/app/views/haberes/liquidacionPuestos/verLiquidacionPuesto.scala.html
@@ -1,11 +1,11 @@
-@(lcForm: Form[models.haberes.LiquidacionPuesto],lc:models.haberes.LiquidacionPuesto, paginadorFicha: utils.pagination.PaginadorFicha)
+@(lcForm: Form[models.haberes.LiquidacionPuesto],lc:models.haberes.LiquidacionPuesto, paginadorFicha: utils.pagination.PaginadorFicha,  tieneEmbargo: Boolean = false)
 @import helper._
 @import utils._
 @paginadorFicha.setActual(lc.id.toString)
 @scripts = {
 	<script src="@routes.Assets.at("javascripts/haberes/liquidacionPuesto.js")" type="text/javascript"></script>
 }
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 
 
 @views.html.haberes.mainHaberes("Vista Liquidación",scripts) {
@@ -19,7 +19,7 @@
 				<!-- <a href="@controllers.haberes.routes.LiquidacionPuestosController.crear()"  class="btn btn-default"><i class="glyphicon glyphicon-plus-sign"></i> Nueva Liquidación</a> -->
 			</div>
 		</div>
-	</div>		
+	</div>
 	@views.html.tags.successError()
 	<div class="row menu-acciones">
 		<div class="col-sm-9">
@@ -38,16 +38,16 @@
 			<p style="padding-top: 3px" href=""  role="group" class="btn btn-default">@paginadorFicha.posicionActual() de @paginadorFicha.getLista().size()</p>
 			@if(paginadorFicha.hasNext()) {
 				<a  role="group" href="@controllers.haberes.routes.LiquidacionPuestosController.ver(paginadorFicha.next().toLong)@UriTrack.get("&")" class="btn btn-default"><i class="glyphicon glyphicon-chevron-right"></i></a>
-			}  
+			}
 		</div>
 		}
-			
-			 
-		</div> 
-	</div>	
-	
+
+
+		</div>
+	</div>
+
 	<input type="hidden" id="liquidacionPuestoId" name="liquidacionPuestoId" value="@lc.id"/>
-	
+
 	<div class="row">
 		<div class="col-sm-4">
 			<div class="form-group">
@@ -68,24 +68,24 @@
 			</div>
 		</div>
 	</div>
-	
-	@views.html.haberes.liquidacionPuestos.tabsLiquidacionPuesto(false,lcForm) 
-	
-	<h4>Total C/A: <b>@utils.NumberUtils.moneda(lc.getTotalCA())</b></h4>	
-	<h4>Total S/A: 	   <b>@utils.NumberUtils.moneda(lc.getTotalSA())</b></h4>	
-	<h4>Total Retenciones: <b>@utils.NumberUtils.moneda(lc.getTotalRetenciones())</b></h4>	
-	<h4>Total a Cobrar: <b>@utils.NumberUtils.moneda(lc. getTotalACobrar())</b></h4>	
+
+	@views.html.haberes.liquidacionPuestos.tabsLiquidacionPuesto(false,lcForm)
+
+	<h4>Total C/A: <b>@utils.NumberUtils.moneda(lc.getTotalCA())</b></h4>
+	<h4>Total S/A: 	   <b>@utils.NumberUtils.moneda(lc.getTotalSA())</b></h4>
+	<h4>Total Retenciones: <b>@utils.NumberUtils.moneda(lc.getTotalRetenciones())</b></h4>
+	<h4>Total a Cobrar: <b>@utils.NumberUtils.moneda(lc. getTotalACobrar())</b></h4>
 	<h4>Estado actual: 	<b>@lc.estado.nombre</b></h4>
-	
-	<div class="row margin-bottom-25">	
-		@for(estado <- models.Estado.getSiguienteEstadoPorAprobar(lc.estado.orden,models.Estado.TIPO_LIQUIDACION_PUESTOS)) {	
+
+	<div class="row margin-bottom-25">
+		@for(estado <- models.Estado.getSiguienteEstadoPorAprobar(lc.estado.orden,models.Estado.TIPO_LIQUIDACION_PUESTOS)) {
 			@if(estado.orden <= 4) {
 				<div class="col-sm-3">
 					<a href="@controllers.haberes.routes.LiquidacionPuestosController.cambiarEstado(lcForm.field("id").value.toInt, estado.id.toLong)@UriTrack.get("&")" class="btn btn-default">
 						<i class="glyphicon glyphicon-arrow-right"></i> @estado.nombre
 					</a>
 				</div>
-				
+
 			}
 		}
 		@if(lc.estado.id == models.Estado.LIQUIDACION_PUESTOS_CANCELADO) {
@@ -101,7 +101,7 @@
 				</a>
 			</div>
 		}
-		
+
 		@if(lc.estado.id == models.Estado.LIQUIDACION_PUESTOS_BORRADOR) {
 		<div class="col-sm-3">
 			<a href="@controllers.haberes.routes.LiquidacionPuestosController.preLiquidar(lc.puestoLaboral.id,lc.liquidacionMes.id,lc.id)@UriTrack.get("&")" class="btn btn-default">
@@ -110,6 +110,6 @@
 		</div>
 		}
 	</div>
-	
-	
+
+
 }
