--- a/app/views/recupero/mainRecupero.scala.html
+++ b/app/views/recupero/mainRecupero.scala.html
@@ -46,6 +46,7 @@
 				}
 				@if(Permiso.check("recuperoInformeResumen")) {
 					<li><a href="@controllers.dashboard.routes.InformesRecuperoController.index()">Informe Resumen</a></li>
+					<li><a href="@controllers.recupero.routes.RecuperoClientesController.listaDeclaracionJuradaObraSocial()">Declaracion Jurada OS</a></li>
 				}
 
 
