--- a/app/views/recupero/recuperoCliente/listaDeclaracionJuradaObraSocial.scala.html
+++ b/app/views/recupero/recuperoCliente/listaDeclaracionJuradaObraSocial.scala.html
@@ -11,7 +11,7 @@
 <div class="page-header">
 	<div class="row">
 		<div class="col-sm-9">
-			<h1>Gestión de clientes</h1>
+			<h1>Declaracion Jurada Obra Sociales</h1>
 		</div>
 
 		<div class="col-sm-3">
