--- a/app/views/recupero/recuperoCliente/index.scala.html
+++ b/app/views/recupero/recuperoCliente/index.scala.html
@@ -133,7 +133,7 @@
 		</tbody>
 	</table>
 		<div class="pagination pull-right">
-		    @views.html.helpers.paginador(buscador, controllers.recupero.routes.RecuperoClientesController.index(tipoCliente))
+		    @views.html.helpers.paginadorProductosSolicitud(buscador, controllers.recupero.routes.RecuperoClientesController.index(tipoCliente))
 		</div>
 }
 
