--- a/app/views/haberes/puestosLaborales/verPuestoLaboral.scala.html
+++ b/app/views/haberes/puestosLaborales/verPuestoLaboral.scala.html
@@ -104,8 +104,8 @@
 					</p>
 			</div>
 		</div>
-		<div class="col-sm-3">
-			<div class="col-sm-6">
+		<div class="col-sm-6">
+			<div class="col-sm-4">
 				<b>Convenio Ministerio</b>
 				<div class="row">
 					<div class="col-sm-5">
@@ -124,9 +124,16 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-sm-6">
+			<div class="col-sm-4">
 				<label class="control-label">Cargo Laboral</label>
 				<p class="form-control-static form-control">@lcForm.field("cargoLaboral.nombre").value</p>
+			</div>
+			<div class="col-sm-4">
+				<label class="control-label">Dobla</label>
+				<p class="form-control-static form-control">
+				@if(lcForm("dobla").value == "true"){SI}else{NO}
+				</p>
+
 			</div>
 		</div>
 	</div>
