--- a/app/views/patrimonio/inventario/indexInventario.scala.html
+++ b/app/views/patrimonio/inventario/indexInventario.scala.html
@@ -2,7 +2,7 @@
 @import helper._
 @import models.auth._
 @import utils._
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 
 @scripts = {
 	<script src="@routes.Assets.at("javascripts/patrimonio/inventario.js")" type="text/javascript"></script>
@@ -16,24 +16,24 @@
 				<h1>Inventario de productos</h1>
 			</div>
 
-			
+
 		</div>
-		
+
 	</div>
 
 @views.html.tags.successError()
 @helper.form(action = controllers.patrimonio.routes.InventarioController.index(), 'id -> "buscadorInventario") {
-<div class="row">	
-		
+<div class="row">
+
 		<div class="form-group col-sm-2">
 			<label for="nombre" class="control-label">Prefijo
-			@select(formBuscador("prefijo_inventario_id"), 
-				 InventarioPrefijo.find.findList().map { p => p.id.toString -> (p.prefijo + " | " + p.nombre)}, 
+			@select(formBuscador("prefijo_inventario_id"),
+				 InventarioPrefijo.find.findList().map { p => p.id.toString -> (p.prefijo + " | " + p.nombre)},
 			'class -> "form-control select inline", 'id -> "prefijo_inventario_id", '_default -> "Seleccionar" )
 			</label>
 		</div>
-		
-		
+
+
 	<div class="col-sm-3">
 		<div class="row">
 
@@ -42,14 +42,14 @@
 				@inputText(formBuscador("numero"), 'class -> "form-control", 'autofocus -> "autofocus")
 				</label>
 			</div>
-		
+
 			<div class="form-group col-sm-6">
 				<label for="nombre" class="control-label">Remito
 				@inputText(formBuscador("remito_numero"), 'class -> "form-control")
 				</label>
 			</div>
 		</div>
-	
+
 	</div>
 
 	<div class="col-sm-3">
@@ -59,13 +59,13 @@
 				@inputText(formBuscador("proveedor_nombre"), 'name -> "", 'class -> "form-control", 'id -> "proveedor")
 				<span class="input-group-addon">
 					<a href="#" class="searchModal"
-								id="searchProveedor" 
-								data-title="Selección de Proveedores" 
-								data-url="@controllers.compras.routes.ProveedoresController.modalBuscar()" 
-								data-height="650" 
-								data-width="700" 
-								data-listen="modal.seleccion.proveedor.simple" 
-								data-label="#proveedor" 
+								id="searchProveedor"
+								data-title="Selección de Proveedores"
+								data-url="@controllers.compras.routes.ProveedoresController.modalBuscar()"
+								data-height="650"
+								data-width="700"
+								data-listen="modal.seleccion.proveedor.simple"
+								data-label="#proveedor"
 								data-field="#proveedor_id">
 						<i class="glyphicon glyphicon-search"></i>
 					</a>
@@ -82,38 +82,60 @@
 			<span class="input-group-addon"><a href="#" id="searchProducto" data-title="Selección de producto" data-url="@controllers.compras.routes.ProductosController.modalBuscar()" data-height="650" data-width="700" data-listen="modal.seleccion.producto.simple" data-label="#producto" data-field="#producto_id"><i class="glyphicon glyphicon-search"></i></a></span>
 		</div>
 	</div>
-
+			<div class="col-sm-2">
+				<label class="control-label">Expediente
+					<div class="input-group">
+						@inputText(formBuscador("expediente_id"), 'hidden -> "hidden", 'id -> "expediente_id")
+						@inputText(formBuscador("expediente.nombre"), 'name -> "", 'class -> "form-control", 'id -> "expediente")
+						<span class="input-group-addon">
+							<a href="#" class="searchModal"
+										id="searchExpedienteActa"
+										data-title="Selección de expediente"
+										data-url="@controllers.expediente.routes.ExpedientesController.modalBuscar()"
+										data-height="650"
+										data-width="700"
+										data-listen="modal.seleccion.expediente.simple"
+										data-label="#expediente"
+										data-field="#expediente_id">
+								<i class="glyphicon glyphicon-search"></i>
+							</a>
+						</span>
+					</div>
+				</label>
+			</div>
+</div>
+<div class="row">
 	<div class="col-sm-2">
 		<div class="form-group">
 		<label for="nombre" class="control-label">&nbsp;</label>
 		<button  class="form-control btn btn-primary"><i class="glyphicon glyphicon-search"></i> Buscar</button>
 		</div>
-	</div>	
-	
+	</div>
+
 	<div class="col-sm-2">
 		<div class="form-group">
 		<label for="nombre" class="control-label">&nbsp;</label>
 		<a href="@controllers.patrimonio.routes.InventarioController.index()"  class="form-control btn btn-default">Limpiar</a>
 		</div>
 	</div>
-	
+
 </div>
 }
 
 
   @if(buscador.getTotalRowCount == 0) {
-        
+
        <div class="well">
            <em>No se encuentran actas de recepción</em>
        </div>
-        
+
     } else {
-		
-		Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s).   
+
+		Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s).
 		<table id="listaActasRecepcion" class="table table-striped table-bordered table-hover">
-			<thead>	
+			<thead>
 				<tr>
-					
+
 					<th width="100">Producto</th>
 					<th width="100">Prefijo</th>
 					<th width="100">Número</th>
@@ -123,7 +145,7 @@
 			<tbody>
 		        @for(i <- buscador.getList) {
 				<tr>
-					
+
 					<td>@i.producto.nombre</td>
 					<td>@if(i.prefijo != null) {@i.prefijo.prefijo}</td>
 					<td>@i.numero</td>
@@ -132,7 +154,7 @@
               	}
 			</tbody>
 		</table>
-		
+
 		<div class="pagination pull-right">
 		    @views.html.helpers.paginador(buscador, controllers.patrimonio.routes.InventarioController.index())
 		</div>
@@ -145,10 +167,10 @@
 $( function(){
 	$("#desde, #hasta").mask("99/99/9999");
 	$('#searchProveedor, #searchProducto').modalSearch();
-	
-	
-	
-	
-	
+
+
+
+
+
 })
 </script>
